deployments/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laa-manage-a-civil-application-dev
  labels:
    app: laa-manage-a-civil-application-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: laa-manage-a-civil-application-dev # this should match the selector in service.yml
  template:
    metadata:
      labels:
        app: laa-manage-a-civil-application-dev # this should match the selector in service.yml
    spec:
      containers:
        - name: laa-manage-a-civil-application-dev
          image: ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
          ports:
            - containerPort: 8080
