deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laa-manage-a-civil-application-dev-service
spec:
  selector:
    app: laa-manage-a-civil-application-dev # this should match the pod label in deployment.yml
  ports:
    - name: https
      port: 8080
      targetPort: 8080
